/// <summary>
/// Clase de valores constantes.
/// </summary>
public static class Constants {

    // ====== SCENES ======
    public const string SCENE_GAME = "Game";
    public const string SCENE_MAIN_MENU = "MainMenu";

    // ====== PLAYER ANIMATOR ======
    public const string ANIM_PLAYER_IS_MOVING = "isMoving";
    public const string ANIM_PLAYER_SHOOT = "Shoot";

    // ===== ORC ANIMATOR =====
    public const string ANIM_ORC_SPEED = "speed";
    public const string ANIM_ORC_SEARCH = "search";
    public const string ANIM_ORC_MOTION = "motion";
    // ===== PLAYER PREFS KEYS =====
    public const string KEY_CURRENT_COINS = "currentCoins";
    // ===== CHEST ANIMATOR =====
    public const string ANIM_CHEST_OPEN = "open";
}